--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ django-dotenv==1.4.2
 django-money==1.3.1
 djangorestframework==3.12.4
 download-gitignore==2.0.1
+Faker==7.0.1
 idna==2.8
 iniconfig==1.1.1
+mixer==7.1.2
 packaging==20.9
 pluggy==0.13.1
 py==1.10.0
@@ -20,8 +22,11 @@ py-moneyed==0.8.0
 pyparsing==2.4.7
 pytest==6.2.3
 pytest-django==4.1.0
+python-dateutil==2.8.1
 pytz==2021.1
 requests==2.22.0
+six==1.15.0
 sqlparse==0.4.1
+text-unidecode==1.3
 toml==0.10.2
 urllib3==1.25.11
