--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 asgiref==3.3.1
 atomicwrites==1.4.0
 attrs==20.3.0
+Babel==2.9.0
 certifi==2020.12.5
 chardet==3.0.4
 Click==7.0
 colorama==0.4.4
 coverage==5.5
 Django==3.1.7
-django-dotenv==1.4.2
 django-money==1.3.1
 djangorestframework==3.12.4
 download-gitignore==2.0.1
@@ -23,6 +23,7 @@ pyparsing==2.4.7
 pytest==6.2.3
 pytest-django==4.1.0
 python-dateutil==2.8.1
+python-dotenv==0.17.0
 pytz==2021.1
 requests==2.22.0
 six==1.15.0
